--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -16,7 +16,11 @@ body
                     li.nav-item
                         a.nav-link(href='#') Features
                     li.nav-item
-                        a.nav-link(href='#') Showcase
+                        a.nav-link(href='#') Examples
+                    li.nav-item
+                        a.nav-link(href='#') Docs
+                    li.nav-item
+                        a.nav-link(href='#') Blog
                 span.navbar-text  text
 
 
