--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -33,10 +33,10 @@ body
                 include /text/motto.md
                 p
 
-                p low
-                p iterations
+                p 1 truck low
+                p 2 skate iterations
 
-                p major diff (more)
+                p 3 major diff shrot list - more long list (landing)
 
                 .jumbotron.p-3.p-md-5.text-white.rounded.bg-dark
                     .col-md-6.px-0
