--- a/site/includes/navbar.pug
+++ b/site/includes/navbar.pug
@@ -15,4 +15,5 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
                a.nav-link(href='#') Docs
             li.nav-item
                a.nav-link(href='#') Blog
-         span.navbar-text  text
+         a.navbar-text(href='//github.com/intuition-dev', target="_blank")
+            i.fa.fa-github
