--- a/site/includes/navbar.pug
+++ b/site/includes/navbar.pug
@@ -10,10 +10,10 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
             li.nav-item
                a.nav-link(href='/landing/features/') Features
             li.nav-item
-               a.nav-link(href='#') Examples
+               a.nav-link(href='/examples') Examples
             li.nav-item
-               a.nav-link(href='#') Docs
+               a.nav-link(href='https://intuition-dev.github.io/IntuitionDocs/#/') Docs
             li.nav-item
-               a.nav-link(href='#') Blog
+               a.nav-link(href='https://blog.metabake.org/') Blog
          a.navbar-text(href='//github.com/intuition-dev', target="_blank")
             i.fa.fa-github
