site examples wip

--- a/site/includes/footer.pug
+++ b/site/includes/footer.pug
@@ -1,11 +1,15 @@
-footer.bg-secondary
+footer.bg-dark
    .container.mt-3
       div.py-5
             a.h5(href="/").text-white INTUITION.DEV
             div.font-italic.text-white It will LEAD you in the right direction
-   .bg-dark
+   .bg-very-dark
       .container
             .p-2.d-flex.justify-content-between.text-secondary
                .copyright.font-weight-light &#169; 2019 
                   span.d-inline-block.pl-1 Intuition
                a.font-weight-light.text-secondary(href='//github.com/intuition-dev') Github
+   style.
+        .bg-very-dark {
+           background: #2a2f33;
+        }
