--- a/site/landing/features/index.pug
+++ b/site/landing/features/index.pug
@@ -8,6 +8,8 @@ body
 
     .container.jumbotron
         .row
+            .col-md-12.text-center
+                h3.mb-3.pb-3 Features
             .col-md-5
                 .feat-list
                     include:metaMD /text/features1.md
