--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -29,7 +29,7 @@ body
                         p Version 1.0 spec is followed by next version - majority of effort is after 1.0 release!
                         p.display-5 What if users could maintain and build next version?
                         p INTUITION.DEV is built in Pug language
-                        img(src="iterative.png").rounded.mt-2
+                        img(src="iterative.png").rounded.mt-2.img-fluid
         //- 2 skate iterations
         .container.pb-5
             .jumbotron.bg-light.p-0
@@ -52,7 +52,7 @@ body
 
             .row.mb-2
                     .col-md-6
-                        .card
+                        .card.mb-3
                             .row.no-gutters
                                 .col-md-8
                                     .card-body
@@ -60,21 +60,21 @@ body
                                             a.text-dark(href='https://intuition-dev.github.io/IntuitionDocs/#/CRUD', target='_blank') Basic CRUD application
                                         p.card-text.mb-auto Building  a simple CRUD application with Intu
                                         a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/CRUD', target='_blank').mt-3 Read More
-                                .col-md-4
-                                    img.card-img-right(src='https://placeimg.com/200/250/tech').img-fluid
+                                .col-md-4.col-xs-12
+                                    img.card-img-right(src='https://placeimg.com/200/250/tech').img-fluid.mx-auto.d-block
                     .col-md-6
-                        .card
+                        .card.mb-3
                             .row.no-gutters
                                 .col-md-8
                                     .card-body
                                         h4.card-title Mobile
                                         p.card-text
-                                        | Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imperdiet sem. Integer sed mi quis nisl eleifend interdum.
-                                        p.card-text
-                                        | Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imperdiet sem.
+                                            | Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imperdiet sem. Integer sed mi quis nisl eleifend interdum.
+                                        p.card-text.mb-auto
+                                            | Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imperdiet sem.
                                         a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/mobile', target='_blank').mt-3 Read More
-                                .col-md-4
-                                    img(src='https://placeimg.com/200/250/tech').img-fluid
+                                .col-md-4.col-xs-12
+                                    img(src='https://placeimg.com/200/250/tech').img-fluid.mx-auto.d-block
     include /includes/footer
     
     style.
