--- a/site/includes/navbar.pug
+++ b/site/includes/navbar.pug
@@ -14,6 +14,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
          li.nav-item
             a.nav-link(href='https://intuition-dev.github.io/IntuitionDocs/#/', target="_blank") Docs
          li.nav-item
-            a.nav-link(href='https://blog.metabake.org/', target="_blank") Blog
+            a.nav-link(href='https://blog.metabake.net/', target="_blank") Blog
       a.navbar-text(href='//github.com/intuition-dev', target="_blank")
          i.fa.fa-github
